# internal/models/auth.go
@@ -14,7 +14,6 @@ type Login struct {
 }
 
 type Register struct {
-	FullName string `json:"full_name" validate:"required"`
 	Role     string `json:"role" validate:"required"`
 	Username string `json:"username" validate:"required"`
 	Email    string `json:"email" validate:"required,email"`
